Avalia e corrige código com CodeSniffer

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/Ex 02/style.css
@@ -7,6 +7,11 @@ body {
     padding: 10px;
 }
 
+.cabecalho h1, .cabecalho h2 {
+    /* background-color: blue; */
+    text-align: center;
+}
+
 td, tr, th, table {
     border: 1px solid black;
 }
