--- a/fundamentos/secao-05-dom-eventos-web-storage/dia-04-web-storage/ex-01/style.css
+++ b/fundamentos/secao-05-dom-eventos-web-storage/dia-04-web-storage/ex-01/style.css
@@ -10,9 +10,12 @@ header {
     border: 1px solid green;
     align-items: center;
 }
+header h3 {
+    text-align: center;
+}
 .preferencia {
     display: inline-block;
-    padding:10px;
+    /* padding:10px; */
     width: fit-content;
     /* border: 1px solid red; */
     height: fit-content;
