Implementa novas funções no exercício 01 pos aula

--- a/fundamentos/secao-06-forms-flexbox-responsivo/dia-01/ex-01/style.css
+++ b/fundamentos/secao-06-forms-flexbox-responsivo/dia-01/ex-01/style.css
@@ -37,6 +37,11 @@ header {
   text-align: center;
 }
 
+#char-count {
+  margin: 0 3em;
+  padding-top: 0;  
+}
+
 /* TEXT SHADOWS */
 
   .elegantshadow {
