--- a/frontend/dia-03/ex-fix-01/src/App.css
+++ b/frontend/dia-03/ex-fix-01/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+body {
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  margin: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  width: 75vw;
+  padding: 10px;
+  margin: 8px 0px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: large;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  width: 50vw;
+  background-color: rgb(27, 27, 27);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  align-self: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+button:hover {
+  background-color: rgb(121, 119, 119);
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  background: #6c7a89;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+form {
+  width: 80vw;
+  padding: 30px;
+  background: #fff;
+  border-radius: 10px;
+  margin-bottom: 5vh;
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+b {
+  background-color: white;
+  opacity: 0.7;
+  width: 80vw;
+  padding: 5px;
+  border-radius: 10px;
+  text-align: center;
 }
